--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "baccano": "^2.1.1",
     "null": "^2.0.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "redux": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
